--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,11 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+package-lock.json
+build
+npm-debug.log
+.env
+.DS_Store
 
 # TypeScript v1 declaration files
 typings/
