--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "dependencies": {
     "console.table": "^0.10.0",
+    "figlet": "^1.5.0",
     "inquirer": "^8.0.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7"
